icons, layout, overflow fixed

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -1,40 +1,54 @@
 .section {
 	//background-color: bisque;
-	background-color: rgb(223, 215, 235);
+	//clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
 	height: 100vh;
-	width: 100%;
 	position: relative;
-	color: white;
-	margin: 1em 0;
-	border-radius: 5%;
-	box-shadow: 5px 5px 20px grey;
+	font-family: montserrat;
+	padding: 1em;
+}
+.intro {
+	background-color:white;
+}
+.about {
+	background-color: rgb(243, 242, 242);
+}
+.education{
+	background-color: white;
+}
+.skills {
+	background-color: rgb(243, 242, 242);
+}
+.projects {
+	background-color: white;
 }
 .main-body {
 	position: absolute;
-	width:80%;
+	width:95%;
+	left:2.5%;
 	top: 1%;
-	left: 10%;
-	right: 10%;
 }
 
 mat-drawer{
+	display:flex;
+	border-radius: 1%;
+	font-family: montserrat;
+	text-align: center;
+	padding: 1em;
 	background-color: white;
 	position: fixed;
-	width: 20%;
+	width: 10%;
 	top: 10%;
 	bottom: 10%;
-	border-radius: 5%;
-
+	box-shadow: -2px 5px 20px rgb(59, 59, 59);
 }
 .main-content {
-	border-radius:1%;
-	overflow:hidden;
-	box-shadow: 5px 5px 20px grey;
-	width:90%
+	width: 90%;
+	margin: 4em 1em;
+	box-shadow: 0px 0px 20px grey;
 }
 #overlay {
 	width: 100%;
-	min-height: 303%;
+	min-height: 100%;
 	margin:0;
 	padding:0;
 	position: absolute;
@@ -43,6 +57,7 @@ mat-drawer{
 	-moz-background-size: cover;
 	-o-background-size: cover;
 	background-size:cover;
+	overflow: scroll;
 }
 .back-button {
 	z-index: 10;
@@ -54,14 +69,14 @@ mat-drawer{
 	.back {
         width: 2.5em;
         height: 2.5em;
-        border: 2px solid white;
+        border: 2px solid black;
         border-radius: 50%;
         display: flex;
         align-items: center;
 		justify-content: center;
         cursor: pointer;
         fa-icon {
-			color: white;
+			color: black;
         }
     }
 }
@@ -89,18 +104,18 @@ mat-drawer{
 	.circle {
         width: 3em;
         height: 3em;
-        border: 1.5px solid yellow;
+        border: 1.5px solid black;
         border-radius: 50%;
         display: flex;
         align-items: center;
 		justify-content: center;
 		
         fa-icon {
-			color: yellow;
+			color: black;
 		}
 	};
 	span {
-		color: yellow;
+		color: black;
 		font-family: Montserrat;
 		margin-top: 0.3em;
 		font-size: 0.8em;
